--- a/css/styles.css
+++ b/css/styles.css
@@ -517,6 +517,31 @@ body.categories-page {
   border-top-color: #495057;
 }
 
+/* Accordion en modo oscuro */
+[data-bs-theme="dark"] .accordion-body {
+  background-color: var(--bg-secondary);
+  color: var(--text-primary);
+}
+
+[data-bs-theme="dark"] .accordion-button {
+  background-color: var(--bg-secondary);
+  color: var(--text-primary);
+}
+
+[data-bs-theme="dark"] .accordion-button::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23ffffff%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e");
+}
+
+[data-bs-theme="dark"] .accordion-button:not(.collapsed)::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23ffffff%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e");
+  transform: rotate(-180deg);
+}
+
+[data-bs-theme="dark"] .accordion-button:not(.collapsed)  {
+  background-color: var(--bg-secondary);
+  color: var(--accent);
+}
+
 /* Mejora para el jumbotron en index */
 [data-bs-theme="dark"] .jumbotron .container {
   background-color: rgba(45, 45, 45, 0.7);
@@ -560,6 +585,66 @@ body.categories-page {
   border: 1px solid #6c757d;
 }
 
+/* Estilos para el badge del carrito - mobile */
+[data-bs-theme="dark"] .badgeCartMobile {
+  background-color: #0d6efd;
+  color: #fff;
+}
 
+[data-bs-theme="dark"] .badgeCartMobile::after {
+  border-color: #0d6efd;
+}
 
+[data-bs-theme="dark"] .badgeCartMobile:hover {
+  background-color: #0056b3;
+  color: #fff;
+}
 
+.badgeCartMobile {
+  position: absolute;
+  top: -5px;
+  right: 10px;
+  background-color: #ffc107;
+  color: #212529;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  z-index: 10;
+}
+
+/* Estilos para el badge del carrito - desktop */
+[data-bs-theme="dark"] .badgeCart {
+  background-color: #0d6efd;
+  color: #fff;
+}
+
+[data-bs-theme="dark"] .badgeCart::after {
+  border-color: #0d6efd;
+}
+
+[data-bs-theme="dark"] .badgeCart:hover {
+  background-color: #0056b3;
+  color: #fff;
+}
+
+.badgeCart {
+  position: absolute;
+  top: -5px;
+  right: 10px;
+  background-color: #ffc107;
+  color: #212529;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  z-index: 10;
+}
